<resources>
    <string name="app_name">FoodieHub</string>
    <string name="app_description">Your food guide, powered by Zomato!</string>


    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="something_went_wrong">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <string name="admob_app_id">ca-app-pub-8282213133667534~7381112751</string>

    <string name="username">Username</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="no_internet">No Internet</string>
    <string name="refresh">Refresh</string>
    <string name="proceed">Proceed</string>
    <string name="no_google_play">No Google play</string>
    <string name="your_location">Your location</string>
    <string name="directions">Directions</string>
    <string name="highlighted_reviews">Highlighted reviews</string>
    <string name="reviews">Reviews</string>
    <string name="menu">Menu</string>
    <string name="open_in_zomato_app">Open in Zomato app</string>
    <string name="zomato_app_not_installed">Zomato app not installed</string>
    <string name="search_for_locations">Search for locations...</string>
    <string name="share_using">Share using</string>
    <string name="link_format_zomato_restaurant">http://zoma.to/r/</string>
    <string name="get_instant_confirmations">Get instant confirmations</string>
    <string name="closed">Closed</string>
    <string name="enjoy_your_gold_privilege">Enjoy your gold privilege</string>
    <string name="book_now">Book now</string>
    <string name="looking_for_food_delivery">Looking for food delivery?</string>
    <string name="order_food_online_from">Order food online from</string>
    <string name="this_restaurant_is_not_accepting_food_delivery_orders_right_now">This restaurant is not accepting food delivery orders right now</string>
    <string name="currently_closed_for_delivery">Currently closed for delivery</string>
    <string name="book_a_table">Book a table</string>
    <string name="order_online">Order online</string>
    <string name="search_restaurants">Search restaurants</string>
    <string name="app_subtitle">Think food, think us!</string>
    <string name="see_events_here">See Events here</string>
    <string name="have_a_sneak_peak_into_the_events_happening_here">Have a sneak peak into the events happening here</string>
    <string name="online_order">Online order</string>
    <string name="table_booking">Table booking</string>
    <string name="dummy_duration">5 months</string>
    <string name="ok">Okay!</string>
    <string name="an_internet_connection_is_required">An Internet connection is required for this app to run.</string>
    <string name="restart">Restart app</string>
    <string name="its_empty_here">Its empty here</string>
    <string name="location_pref_change">Location: </string>
    <string name="use_current_location">Use current location</string>
    <string name="detecting_location">Detecting location…</string>
    <string name="fetching_location">Fetching location…</string>
    <string name="custom_location">Custom location</string>
    <string name="location_permission_needed">To show you the best restaurants around you, We need location permission access.</string>
    <string name="location_permission_needed_title">Missing location access</string>
    <string name="grant">Grant access!</string>
    <string name="choose_location">Choose location</string>
    <string name="choose_location_for_handpicked_restaurants">For showing the best around you!</string>
    <string name="cant_access_current_location_without_perm">Can\'t access current location without location permissions</string>
    <string name="cancel">Cancel</string>
    <string name="showing_restaurants_over_the_world">Showing restaurants around the world</string>
    <string name="showing_restaurants_around_you">Showing restaurants around you</string>
</resources>
