<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    tools:padding="10dp"
    android:background="?selectableItemBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_table_booking"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_bold"
                android:text="@string/book_a_table"
                android:textColor="@color/bg_book_a_table" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circular_medium"
                android:text="@string/get_instant_confirmations"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tableBookingStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_cost_for_two"
            android:fontFamily="@font/circular_medium"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:textSize="12sp"
            android:text="@string/closed" />
    </LinearLayout>

    <include layout="@layout/component_plain_divider" />


</LinearLayout>