<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="10dp"
    android:paddingEnd="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center">

    <RelativeLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/orderAvailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:visibility="gone">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_delivery" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_bold"
                    android:maxLines="1"
                    android:text="@string/looking_for_food_delivery"
                    android:textColor="@color/bg_order_online"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/orderFromResName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_book"
                    android:maxLines="1"
                    android:text="@string/order_food_online_from"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/orderNotAvailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_no_delivery" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_bold"
                    android:maxLines="1"
                    android:text="@string/currently_closed_for_delivery"
                    android:textColor="@color/dark_gray"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circular_book"
                    android:maxLines="1"
                    android:text="@string/this_restaurant_is_not_accepting_food_delivery_orders_right_now"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <include
        layout="@layout/component_dashed_divider"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />
</LinearLayout>